@@ -1,3 +1,7 @@
+2003-03-02  Stefan Petersen  <spe@stacken.kth.se>
+
+	* src/draw_amacro.c: Aperture macro primitive 1 is a filled circle.
+
 2003-03-01  Stefan Petersen  <spe@stacken.kth.se>
 
 	* src/gerb_image.[hc], gerber.c: Redesigned step-and-repeat
